--- a/_posts/2022-09-04-order-api.md
+++ b/_posts/2022-09-04-order-api.md
@@ -1,7 +1,7 @@
 ---
 title: FineTech Catalog API v1.0.0
 date: 2022-09-04 10:00:00
-categories: [customer]
+categories: [sales,order,api]
 tag: [api]
 language_tabs:
   - http: Http
