change to finelab.io

--- a/_posts/2022-09-04-order-api.md
+++ b/_posts/2022-09-04-order-api.md
@@ -8,7 +8,7 @@ language_tabs:
 language_clients:
   - http: ""
 toc_footers:
-  - <a href="https://developer.finetech.dk/sales">Customer API</a>
+  - <a href="https://developer.finelab.io/sales">Customer API</a>
 includes: []
 search: false
 highlight_theme: darkula
@@ -20,9 +20,9 @@ The Catalog API allows you recieve products from FineTech's product catalog.
 Base URLs:
 * <a href="http://localhost:8080">http://localhost:8080</a>
 
-* <a href="https://test-api.finetech.dk">https://test-api.finetech.dk</a>
+* <a href="https://test-api.finelab.io">https://test-api.finelab.io</a>
 
-Email: <a href="mailto:api@finetech.dk">API support</a> 
+Email: <a href="mailto:api@finelab.io">API support</a> 
 License: <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache 2.0</a>
 
 # Authentication
