change to finelab.io

--- a/_posts/2022-09-04-order-api.md
+++ b/_posts/2022-09-04-order-api.md
@@ -1,5 +1,5 @@
 ---
-title: FineTech Catalog API v1.0.0
+title: Catalog API v1.0.0
 date: 2022-09-04 10:00:00
 categories: [sales,order,api]
 tag: [api]
@@ -16,7 +16,7 @@ headingLevel: 2
 
 ---
 
-The Catalog API allows you recieve products from FineTech's product catalog.
+The Catalog API allows you recieve products from the finelab product catalog.
 Base URLs:
 * <a href="http://localhost:8080">http://localhost:8080</a>
 
@@ -31,13 +31,13 @@ License: <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache 2.0</a>
 
     - Flow: clientCredentials
 
-    - Token URL = [https://finetech-test.eu.auth0.com/oauth/token](https://finetech-test.eu.auth0.com/oauth/token)
+    - Token URL = [https://finelab-test.eu.auth0.com/oauth/token](https://finelab-test.eu.auth0.com/oauth/token)
 
 |Scope|Scope Description|
 |---|---|
 |read:catalog|Allows to read catalog|
 
-<h1 id="finetech-catalog-api-sales">Sales</h1>
+<h1 id="finelab-catalog-api-sales">Sales</h1>
 
 ## getProductCatalogs
 
